refactor: centraliza mensagens de erro